<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Bats! Password Manager</string>
    <string name="app_name_prefs">Bats! Pass Preferences</string>
    <string name="app_content">Bats! Password Data</string>
    <string name="btn_unlock">Unlock</string>
    <string name="hint_password">Master Password</string>
    <string name="hint_importpass">Import DB Password</string>
    <string name="wrong_password">Incorrect Password</string>
    <string name="new_button">New</string>
    <string name="done_string">Done</string>
    <string name="cancel_string">Cancel</string>
    <string name="ok_string">OK</string>
    <string name="hint_service">Service Name</string>
    <string name="hint_uid">User ID (optional)</string>
    <string name="hint_pw">Password</string>
    <string name="fill_dict">Dictionary</string>
    <string name="fill_rand">Random</string>
    <string name="new_login">New Login</string>
    <string name="edit_login">Edit Login</string>
    <string name="confirm_delete">Delete Login?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="min_password">"Password too short!"</string>
    <string name="action_rekey">Change Master Password</string>
    <string name="action_newkey">Set Master Password</string>
    <string name="action_delete">Delete Master Database</string>
    <string name="action_delete_confirm">Warning: you are about to delete your master password database! Are you sure you want to do this?</string>
    <string name="action_import">Import Password Database</string>
    <string name="action_importing">Please wait while the database is imported.</string>
    <string name="action_settings">Preferences&#8230;</string>
    <string name="action_about">About&#8230;</string>
    <string name="action_export">Export Password Database</string>
    <string name="export_chooser">Export Password Database Via&#8230;</string>
    <string name="error">Error!</string>
    <string name="db_closed">You must unlock the database before changing your password.</string>
    <string name="hint_oldpass">Current Master Password</string>
    <string name="hint_newpass">New Master Password</string>
    <string name="hint_confirm">Confirm New Password</string>
    <string name="hint_confirm_match">Passwords Don\'t Match!</string>
    <string name="pwlength_title">Password strength</string>
    <string name="pwlength_summary">Length of generated passwords</string>
    <string name="pwlength_default">3</string>
    <string name="permission_pwcontent">Read Password Database</string>
    <string name="permission_pwcontent_desc">Read the password database in encrypted form, e.g., for backup purposes.</string>
    <string name="action_about_message">
Bats Password Manager uses SQLCipher Community Edition, which is made available by Zetectic LLC under the following license:
\n
\nCopyright &#169; 2008-2012 Zetetic LLC
\nAll rights reserved.
\n
\nRedistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
\n
\n * Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
\n * Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the documentation and/or other materials provided with the distribution.
\n * Neither the name of the ZETETIC LLC nor the names of its contributors may be used to endorse or promote products derived from this software without specific prior written permission.
\n
\nTHIS SOFTWARE IS PROVIDED BY ZETETIC LLC "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL ZETETIC LLC BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</string>
</resources>
