<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/oldpass"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_oldpass"
    />

    <EditText 
        android:id="@+id/newpass"
        android:inputType="textVisiblePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_newpass"
    />

    <EditText 
        android:id="@+id/confirm"
        android:inputType="textVisiblePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_confirm"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fillPwDict"
            android:text="@string/fill_dict"
            android:id="@+id/newpass_dict"
            style="?android:attr/buttonBarStyle"
            android:textSize="16sp" />

         <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fillPwRand"
            android:text="@string/fill_rand"
            android:id="@+id/newpass_rand"
            style="?android:attr/buttonBarStyle"
            android:textSize="16sp" />
        
    </LinearLayout>
</LinearLayout>
