<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText 
        android:id="@+id/serviceinput"
        android:inputType="textVisiblePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_service"
    />

    <EditText 
        android:id="@+id/uidinput"
        android:inputType="textVisiblePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_uid"
    />

    <EditText 
        android:id="@+id/pwinput"
        android:inputType="textVisiblePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/hint_pw"
    />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fillPwDict"
            android:text="@string/fill_dict"
            android:id="@+id/pwinput_dict"
            style="?android:attr/buttonBarStyle"
            android:textSize="14sp" />
        
        <View 
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="4dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/dividerVertical"
        />

         <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="fillPwRand"
            android:text="@string/fill_rand"
            android:id="@+id/pwinput_rand"
            style="?android:attr/buttonBarStyle"
            android:textSize="14sp" />
        
    </LinearLayout>


</LinearLayout>
